added Annas translation of the case definition

--- a/source/blog/posts/2020-04-16/de.html.erb
+++ b/source/blog/posts/2020-04-16/de.html.erb
@@ -1,36 +1,41 @@
 ---
 permalink: case definition
-title: Case Definition Explained
+title: Wie definiert man COVID-19 Fälle?
 author: Ximena Bonilla
 ---
-<div class="alert alert-primary text-center font-italic">Wenn Sie uns beim Übersetzen helfen können, kontaktieren Sie uns.</div>
 
 <p>
-  When a disease is being monitored, epidemiologists follow its progression by counting cases, calculating infection rates in the population, and then tracking the changes in these numbers over time. However, in order to count cases, a <b>case definition</b> needs to be established.
+  Epidemiologen können die Ausbreitung einer Krankheit innerhalb der Bevölkerung durch die Überprüfung von Fallzahlen und Infektionsraten bewerten und durch gewissenhaftes Verfolgen dieser Zahlen über die Zeit hinweg die Situation überwachen. Als Grundlage hierfür benötigt man jedoch eine exakte Falldefinition.
 </p>
 
 <p>
-  By following standard guidelines, it is possible to compare the number of cases, or the affected rates at different times or with other countries (providing they use the same guidelines to define their cases)1. We could compare the number of COVID-19 cases occurring in the Canton of Bern today, with the number of cases a year from now, or the disease rates for Vaud with those of Zürich, or with those of the whole of Switzerland. These types of comparisons allow for example, the identification of areas that are more susceptible to COVID-19 in order to allocate more resources, or areas where the disease has been controlled where it is OK to relax restrictions. When a difference is observed using the same case definition, the difference is likely to be a real one rather than a consequence of using distinct ways of classifying cases.
+  Mit Hilfe von standardisierten Richtlinien ist es möglich die Fallzahlen und Infektionsraten verschiedener Zeitpunkte als auch verschiedener Länder miteinander  zu vergleichen (vorausgesetzt, es werden dieselben Richtlinien benutzt). Auf diese Weise ist es möglich die Zahl der heutigen COVID-19 Fälle im Kanton Bern mit den Zahlen in einem Jahr zu vergleichen oder die Infektionsraten aus dem Waadtland mit denen des Kantons Zürich oder gar der gesamten Schweiz in Beziehung zu setzen. Diese Art von Vergleichen hilft dabei Regionen die stärker von COVID-19 betroffen sind von solchen Regionen zu unterscheiden in denen die Krankheit unter Kontrolle ist. Auf diese Weise kann man an der einen Stelle rechtzeitig Hilfsmittel bereitstellen und an einer anderen entscheiden ob Restriktionen weiter gelockert werden können. Dies ist jedoch nur möglich wenn für diese Beurteilungen dieselben Richtlinien zur Falldefinition verwendet werden. Nur dann kann man davon ausgehen, dass die gemachten  Beobachtungen vergleichbar sind und nicht durch den Gebrauch unterschiedlicher Definitionen hervorgerufen wurden
+</p>
+
+<p>
+  Da COVID-19 bisher noch weitgehend unerforscht ist, wird die Falldefinition laufend angepasst. Fast täglich gewinnen wir neue Erkenntnisse hinzu. Dennoch haben die Weltgesundheitsorganisation (WHO) und das europäische Zentrum für Seuchenschutz und Prävention (ECDC) Richtlinien mit Standardkriterien herausgegeben anhand derer Mediziner  COVID-19 diagnostizieren können. Auch covidtracker.ch nutzt diese Kriterien um Krankheitsfälle zu definieren und diese auf einer Karte zu visualisieren.
 </p>
 
 <ol>
-  <li> <b>COVID-19 suspected case:</b> Individuals with acute respiratory illness (fever AND at least one more sign or symptom of disease, such as cough and shortness of breath), living in a location with COVID-19 community transmission (such as Switzerland) OR with a history of travel to areas with community transmission of the disease, OR in contact with a confirmed or probable COVID-19 case. </li>
+  <li>
+    <b>Wahrscheinliche COVID-19 Fälle:</b> Personen mit akuter Atemwegserkrankung (Fieber UND mindestens einem Symptomen der Krankheit, wie z.B. Husten oder Atemnot), die in einem Gebiet mit weiter gesellschaftlicher Ausbreitung von COVID-19 (z.B. Schweiz) leben ODER sich vor kurzem in einem Gebiet mit weiter gesellschaftlicher Ausbreitung aufgehalten haben ODER Kontakt zu einer infizierten oder womöglich infizierten Person hatten.
+  </li>
 
-  <li> <b>COVID-19 probable case:</b>A suspected case where the test is inconclusive or could not be performed.</li>
+  <li> <b>COVID-19 Verdachtsfälle:</b>Fälle in denen kein klinischer Test durchgeführt wurde oder nicht eindeutig ausgefallen ist</li>
 
-  <li> <b>COVID-19 confirmed case:</b>A person with laboratory confirmation of COVID-19 infection, irrespective of clinical signs and symptoms.</li>
+  <li> <b>Bestätigte COVID-19 Fälle:</b>Personen mit positivem COVID-19 Nachweis, unabhängig von Symptomen.</li>
 </ol>
 
 <p>
-  Only those with a positive laboratory test (whether they have symptoms or not) are considered confirmed cases. At this time, Switzerland is testing mostly severe cases and thus, the number of confirmed cases is not necessarily indicative of the number of people with COVID-19 in the country, since many have very mild symptoms, or only moderate ones that do not require hospitalization. Therefore, we don't currently show confirmed cases on the map, as this number is small in the current situation. We have decided to show <b>COVID-19 suspected cases</b>, a definition better suited to inform on the prevalence of disease symptoms in our community.
+  Nur Personen, die positiv auf COVID-19 getestet wurden (unabhängig davon, ob sie Symptome haben oder nicht) werden als bestätigte Fälle betrachtet. Zurzeit werden in der Schweiz hauptsächlich Personen mit schwerem Krankheitsverlauf auf COVID-19 getestet, was nicht unbedingt der realen Zahl an Erkrankten entspricht, da viele nur milde oder mäßig ausgeprägte Symptome aufweisen, die keinen Krankenhausaufenthalt erforderlich machen. Da hierdurch die Zahl der derzeit bestätigten Fälle sehr gering ist, werden diese auf der Karte nicht extra angezeigt. Vielmehr haben wir uns dazu entschieden <b>die wahrscheinlichen COVID-19 Fälle</b> darzustellen, da diese besser dafür geeignet sind die Verbreitung von Krankheitssymptomen in der Bevölkerung widerzuspiegeln.
 </p>
 
 <p>
-  As the disease definition is refined by health authorities, we may adapt to reflect other variables (e.g. additional risk factors, comorbidities, new symptoms). Please tune in again for updates, we will post them in this blog when they occur.
+  Es besteht auch weiterhin die Möglichkeit, dass wir diese Definition weiter anpassen werden um andere Faktoren (z.B. zusätzliche Risikofaktoren, Vorerkrankungen und neue Symptome) zu berücksichtigen, oder falls die offiziellen Richtlinien der Gesundheitsbehörden angepasst werden. In diesem Blog werden wir Sie auch weiterhin über alle Änderungen und Neuigkeiten informieren.
 <p/>
 
 <p>
-  For more information:
+  Weitere Informationen:
 </p>
 <ul>
   <li>Principles of Epidemiology | Lesson 1 - Section 5. <a href="https://www.cdc.gov/csels/dsepd/ss1978/lesson1/section5.html">Link to Article</a>  (2019).</li>
