--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,7 @@
     <title><%= t(:title) %></title>
     <%= stylesheet_link_tag "modalise" %>
     <%= stylesheet_link_tag "site" %>
+    <%= stylesheet_link_tag "appview" %>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/meta/favicon-32x32.png">
@@ -47,7 +48,7 @@
     }
     </script>
   </head>
-  <body data-lang="<%= I18n.locale %>">
+  <body id="body" data-lang="<%= I18n.locale %>">
     <%= yield %>
 
     <%= partial "partials/footer" %>
