Changed maps page to use tabs to display the map + stats

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,6 +8,7 @@
     <%= stylesheet_link_tag "modalise" %>
     <%= stylesheet_link_tag "site" %>
     <%= stylesheet_link_tag "appview" %>
+    <%= stylesheet_link_tag "tabs" %>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/images/meta/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/meta/favicon-32x32.png">
@@ -58,5 +59,7 @@
     <%= javascript_include_tag "modalise.min" %>
     <%= javascript_include_tag "persistence" %>
     <%= javascript_include_tag "site" %>
+    <%= javascript_include_tag "tabs.js" %>
+
   </body>
 </html>
