--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -9,6 +9,7 @@
       -->
       <li><%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %></li>
       <li><%= link_to t(:consentInformation), '/consent.html', target: "_blank" %></li>
+      <li><%= link_to t(:pressKitFooter), '/presskit.html', target: "_blank" %></li>
     </ul>
   </div>
 </footer>
