--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -763,3 +763,23 @@ section.map {
 .mdl-footer > .btn {
   margin: 0.5rem 0 0 0.2rem !important;
 }
+
+.pressKit {
+  .boxholder {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    .box {
+      margin: 1rem;
+      width: 250px;
+      .banner {
+        border: solid 1px #ccc;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center center;    
+        width: 100%;
+        height: 140px;
+      }
+    }
+  }
+}
